--- a/projects/F1.html
+++ b/projects/F1.html
@@ -1,36 +1,79 @@
-Columbia FSAE - HV Enclosure
----
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Columbia FSAE - HV Enclosure</title>
+  <link rel="stylesheet" href="../assets/style.css">
+</head>
+<body>
+  <!-- Navigation Bar -->
+  <header>
+    <nav class="navbar">
+      <div class="logo">Handsome Zheng</div>
+      <ul class="nav-links">
+        <li><a href="../index.html">Home</a></li>
+        <li class="dropdown">
+          <a href="#">Projects ▾</a>
+          <ul class="dropdown-content">
+            <li><a href="foosball.html">Automated Foosball Table</a></li>
+            <li><a href="ecmo.html">ECMO Research</a></li>
+            <li><a href="fase.html">FSAE Powertrain</a></li>
+            <li><a href="combat.html">Combat Robotics</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-# Columbia FSAE: HV Enclosure
-Design and manufacture of a **High-Voltage Enclosure** for Columbia University's **Formula SAE Electric** race car.
+  <!-- Project Content -->
+  <section>
+    <h1>Columbia FSAE: HV Enclosure</h1>
+    <p>
+      Design and manufacture of a <strong>High-Voltage Enclosure</strong> for Columbia University's
+      <strong>Formula SAE Electric</strong> race car.
+    </p>
 
-## Objectives
-- Develop a **high-voltage battery enclosure** to house the power supply.
-- Ensure **structural integrity and cooling efficiency** for competition use.
-- Optimize material selection and design through **Finite Element Analysis (FEA).**
+    <h2>Objectives</h2>
+    <ul>
+      <li>Develop a <strong>high-voltage battery enclosure</strong> to house the power supply.</li>
+      <li>Ensure <strong>structural integrity and cooling efficiency</strong> for competition use.</li>
+      <li>Optimize material selection and design through <strong>Finite Element Analysis (FEA)</strong>.</li>
+    </ul>
 
-## Contributions
-### **Battery & Accumulator**
-- Designed battery storage enclosure in **SolidWorks**.
-- Performed **maintenance and material selection** for battery dividers.
+    <h2>Contributions</h2>
 
-  ![Aluminum Accumulator 2025](/assets/images/PortfolioF1.2.PNG)
+    <h3>Battery &amp; Accumulator</h3>
+    <ul>
+      <li>Designed battery storage enclosure in <strong>SolidWorks</strong>.</li>
+      <li>Performed <strong>maintenance and material selection</strong> for battery dividers.</li>
+    </ul>
+    <img src="../assets/images/PortfolioF1.2.PNG" alt="Aluminum Accumulator 2025" style="max-width:600px; width:100%; margin: 1rem 0;">
 
-### **Enclosure Design**
-- Selected **Aluminum 5052-H32** for enclosure material.
-- Modeled **lids, walls, and casing** in **SolidWorks**.
-- Conducted **FEA analysis** to evaluate durability and safety.
+    <h3>Enclosure Design</h3>
+    <ul>
+      <li>Selected <strong>Aluminum 5052-H32</strong> for enclosure material.</li>
+      <li>Modeled <strong>lids, walls, and casing</strong> in <strong>SolidWorks</strong>.</li>
+      <li>Conducted <strong>FEA analysis</strong> to evaluate durability and safety.</li>
+    </ul>
 
-### **Chassis Integration**
-- Designed **mounting tabs** to connect chassis with the accumulator.
-- Assisted in chassis component design for compatibility.
+    <h3>Chassis Integration</h3>
+    <ul>
+      <li>Designed <strong>mounting tabs</strong> to connect chassis with the accumulator.</li>
+      <li>Assisted in chassis component design for compatibility.</li>
+    </ul>
 
-## Tools & Technologies
-- **CAD:** SolidWorks  
-- **Material Analysis:** FEA  
-- **Prototyping:** CNC Machining, 3D Printing  
+    <h2>Tools &amp; Technologies</h2>
+    <ul>
+      <li><strong>CAD:</strong> SolidWorks</li>
+      <li><strong>Material Analysis:</strong> FEA</li>
+      <li><strong>Prototyping:</strong> CNC Machining, 3D Printing</li>
+    </ul>
 
-## Role
-**HV Enclosure Lead** – Responsible for the full design cycle from **concept to implementation**.
+    <h2>Role</h2>
+    <p><strong>HV Enclosure Lead</strong> – Responsible for the full design cycle from <strong>concept to implementation</strong>.</p>
 
-[Return to Home](https://Handsome-Zheng.github.io/)
+    <p><a href="../index.html">← Return to Home</a></p>
+  </section>
+</body>
+</html>
