--- a/projects/FoosballResearch.html
+++ b/projects/FoosballResearch.html
@@ -2,32 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Automated Foosball Table</title>
-  <link rel="stylesheet" href="../assets/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <!-- Navigation Bar -->
-  <header>
-    <nav class="navbar">
-      <div class="logo">Handsome Zheng</div>
-      <ul class="nav-links">
-        <li><a href="../index.html">Home</a></li>
-        <li class="dropdown">
-          <a href="#">Projects ▾</a>
-          <ul class="dropdown-content">
-            <li><a href="foosball.html">Automated Foosball Table</a></li>
-            <li><a href="ecmo.html">ECMO Research</a></li>
-            <li><a href="fase.html">FSAE Powertrain</a></li>
-            <li><a href="combat.html">Combat Robotics</a></li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
-  </header>
+
+  <!-- Navbar (reuse same across pages) -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html">Handsome Zheng</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Projects</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="foosball.html">Automated Foosball Table</a></li>
+              <li><a class="dropdown-item" href="ecmo.html">ECMO Research</a></li>
+              <li><a class="dropdown-item" href="fase.html">FSAE Powertrain</a></li>
+              <li><a class="dropdown-item" href="combat.html">Combat Robotics</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
   <!-- Project Content -->
-  <section>
+  <section class="container my-5">
     <h1>Automated Foosball Table</h1>
     <p>
       An AI &amp; ML-powered robotic foosball player built with
@@ -43,9 +49,12 @@
       <li>Motorized movement</li>
     </ul>
 
-    <img src="../assets/images/PortfolioFR.PNG" alt="Foosball Mujoco Simulation" style="max-width:600px; width:100%; margin: 1rem 0;">
+    <img src="../assets/images/PortfolioFR.PNG" class="img-fluid rounded shadow my-3" alt="Foosball Mujoco Simulation">
 
-    <p><a href="../index.html">← Return to Home</a></p>
+    <p><a href="../index.html" class="btn btn-primary">← Return to Home</a></p>
   </section>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
