--- a/index.html
+++ b/index.html
@@ -49,6 +49,33 @@
     </div>
   </nav>
 
+  <!-- Head -->
+  <header class="bg-light text-center py-5">
+    <img src="assets/images/PortfolioPFP.PNG" alt="Profile Picture" class="rounded-circle mb-3" width="150">
+    <h1 class="fw-bold">Welcome to My Portfolio</h1>
+    <p class="lead">Mechanical Engineering + Computer Science @ Columbia University</p>
+  </header>
+
+  <!-- About Section -->
+  <section id="about" class="container my-5">
+    <h2 class="mb-3">About Me</h2>
+    <p>
+      My name is Handsome Zheng, a current Sophomore studying Mechanical Engineering with a minor in Computer Science at Columbia University.
+      I am passionate about AI, Robotics, and Machine Learning, with hands-on experience in CAD, machining, and engineering projects.
+      I thrive in collaborative, problem-solving environments and enjoy art, working out, and traveling.
+    </p>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="bg-light py-5">
+    <div class="container">
+      <h2 class="mb-3">Contact</h2>
+      <ul>
+        <li><a href="https://www.linkedin.com/in/handsome-zheng" target="_blank">LinkedIn</a></li>
+        <li>Email: <a href="mailto:Hz2857@columbia.edu">Hz2857@columbia.edu</a></li>
+      </ul>
+    </div>
+  </section>
   
   <div class="container text-center mt-5">
     <h1>Welcome to My Portfolio</h1>
