--- a/projects/F1.html
+++ b/projects/F1.html
@@ -22,10 +22,10 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Projects</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="foosball.html">Automated Foosball Table</a></li>
-              <li><a class="dropdown-item" href="ecmo.html">ECMO Research</a></li>
-              <li><a class="dropdown-item" href="f1.html">FSAE Powertrain</a></li>
-              <li><a class="dropdown-item" href="combat.html">Combat Robotics</a></li>
+              <li><a class="dropdown-item" href="projects/FoosballResearch.html">Automated Foosball Table</a></li>
+              <li><a class="dropdown-item" href="projects/CRC.html">ECMO Research</a></li>
+              <li><a class="dropdown-item" href="projects/F1.html">FSAE Powertrain</a></li>
+              <li><a class="dropdown-item" href="projects/CRC.html">Combat Robotics</a></li>
             </ul>
           </li>
         </ul>
