--- a/projects/F1.html
+++ b/projects/F1.html
@@ -62,7 +62,7 @@
     
 <figure class="text-center my-3">
   <img src="../assets/images/PortfolioF1.2.PNG" class="img-fluid rounded shadow" alt="Aluminum Accumulator 2025">
-  <figcaption class="mt-2 text-muted">Aluminum Accumulator 2025</figcaption>
+  <figcaption class="mt-2 text-muted">2025 Aluminum Accumulator</figcaption>
 </figure>
 
 <figure class="text-center my-3">
