--- a/projects/F1.html
+++ b/projects/F1.html
@@ -22,9 +22,9 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Projects</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="projects/FoosballResearch.html">Automated Foosball Table</a></li>
-              <li><a class="dropdown-item" href="projects/F1.html">FSAE Powertrain</a></li>
-              <li><a class="dropdown-item" href="projects/CRC.html">Combat Robotics</a></li>
+              <li><a class="dropdown-item" href="FoosballResearch.html">Automated Foosball Table</a></li>
+              <li><a class="dropdown-item" href="F1.html">FSAE Powertrain</a></li>
+              <li><a class="dropdown-item" href="CRC.html">Combat Robotics</a></li>
             </ul>
           </li>
         </ul>
@@ -35,10 +35,17 @@
   <!-- Project Content -->
   <section class="container my-5">
     
-    <h1 class="mb-3">Columbia FSAE: HV Enclosure Subteam</h1>
+    <h1 class="mb-3">Columbia FSAE: Powertrain Subteam</h1>
+    <figure class="text-center my-3">
+      <img src="../assets/images/PortfolioF1.4.jpg" class="img-fluid rounded shadow" alt="Subteam Photo">
+      <figcaption class="mt-2 text-muted">2025 Subteam Photo</figcaption>
+    </figure>
     <p>
-      <strong>Goal</strong> - Design and manufacture of a High-Voltage Enclosure for Columbia University's
+      <strong>Goal</strong> - Design and manufacture a High-Voltage Enclosure for Columbia University's
       Formula SAE Electric race car.
+    </p>
+    <p>
+      <strong>Tenure</strong> - 2024 to present
     </p>
 
     <h2 class="mt-4">Role:</h2>
@@ -59,9 +66,10 @@
 
     <h3>2025 Accumulator Design</h3>
     <ul>
-      <li>Selected Aluminum 5052-H32 for enclosure material.</li>
-      <li>Modeled lids, walls, and casing in SolidWorks.</li>
-      <li>Conducted FEA analysis to evaluate durability and safety.</li>
+      <li>Selected Aluminum 5052-H32 for the accumulator enclosure, providing strong thermal conductivity and structural stability while reducing weight by 53% compared to the previous all-steel design.</li>
+      <li>Optimized manufacturability by reducing welds and using large aluminum sheets, cutting manufacturing costs from $20,000 to $3,000 while improving ease of fabrication.</li>
+      <li>Modeled lids, walls, and casing in SolidWorks, incorporating aerodynamic air terminals for on-road cooling and improved thermal performance.</li>
+      <li>Conducted FEA to validate strength, durability, and safety while ensuring easy battery accessibility for quick swaps during operation.</li>
     </ul>
     
 <figure class="text-center my-3">
@@ -71,8 +79,8 @@
 
     <h3>Battery Enclosure Design</h3>
     <ul>
-      <li>Selected Aluminum 5052-H32 for enclosure material.</li>
-      <li>Modeled lids, walls, and casing in SolidWorks.</li>
+      <li>Selected Aluminum 5052-H32 for enclosure material. This selection decreased weight and allowed for better thermal contact.</li>
+      <li>Modeled lids, walls, and casing in SolidWorks. Made designs to accomodate new EV car designs and allow for easy electrical wiring access.</li>
       <li>Conducted FEA analysis to evaluate durability and safety.</li>
     </ul>
 
@@ -84,8 +92,9 @@
 
     <h3>Chassis Integration</h3>
     <ul>
-      <li>Designed mounting tabs to connect chassis with the accumulator.</li>
-      <li>Assisted in chassis component design for compatibility.</li>
+      <li>Using Solidworks, designed mounting tabs to connect chassis with the accumulator.</li>
+      <li>Coordinated with other subteam members to design and ensure compatability of chassis design.</li>
+      <li>Rearranged and allocated space for accumulator to account for car stability, cooling, and weight.</li>
     </ul>
 
 <figure class="text-center my-3">
