--- a/projects/FoosballResearch.html
+++ b/projects/FoosballResearch.html
@@ -21,9 +21,9 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Projects</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="projects/FoosballResearch.html">Automated Foosball Table</a></li>
-              <li><a class="dropdown-item" href="projects/F1.html">FSAE Powertrain</a></li>
-              <li><a class="dropdown-item" href="projects/CRC.html">Combat Robotics</a></li>
+              <li><a class="dropdown-item" href="FoosballResearch.html">Automated Foosball Table</a></li>
+              <li><a class="dropdown-item" href="F1.html">FSAE Powertrain</a></li>
+              <li><a class="dropdown-item" href="CRC.html">Combat Robotics</a></li>
             </ul>
           </li>
         </ul>
@@ -48,7 +48,22 @@
       <li>Motorized movement</li>
     </ul>
 
-    <img src="../assets/images/PortfolioFR.PNG" class="img-fluid rounded shadow my-3" alt="Foosball Mujoco Simulation">
+  
+    <figure class="text-center my-3">
+      <img src="../assets/images/PortfolioFR.PNG" class="img-fluid rounded shadow" alt="Aluminum Accumulator 2025">
+      <figcaption class="mt-2 text-muted">2025 Aluminum Accumulator CAD</figcaption>
+    </figure>
+
+    <figure class="text-center my-3">
+      <img src="../assets/images/PortfolioFR.3.PNG" class="img-fluid rounded shadow" alt="Aluminum Accumulator 2025">
+      <figcaption class="mt-2 text-muted">2025 Aluminum Accumulator CAD</figcaption>
+    </figure>
+
+    <figure class="text-center my-3">
+      <img src="../assets/images/PortfolioFR.2.jpg" class="img-fluid rounded shadow" alt="Aluminum Accumulator 2025">
+      <figcaption class="mt-2 text-muted">2025 Aluminum Accumulator CAD</figcaption>
+    </figure>
+
 
     <p><a href="../index.html" class="btn btn-primary">← Return to Home</a></p>
   </section>
