F1 description and image addition

--- a/projects/F1.html
+++ b/projects/F1.html
@@ -51,14 +51,15 @@
     <h2 class="mt-4">Role:</h2>
     <p>
       <strong>HV Enclosure Lead</strong> – Responsible for the full design cycle from
-      concept to implementation for FSAE accumulator and battery pack integration.
+      concept to implementation for FSAE accumulator and battery pack integration. Additionally, assisted and coordinated with other subteams when needed.
     </p>
 
     <h2 class="mt-4">Objectives:</h2>
     <ul>
       <li>Develop a high-voltage battery enclosure to house the power supply.</li>
       <li>Ensure structural integrity and cooling efficiency for competition use.</li>
-      <li>Optimize material selection and design through Finite Element Analysis (FEA).</li>
+      <li>Manufacture car components through machining and 3d printing.</li>
+      <li>Prototype and build the EV 2026 Formula car while iterating and improving the 2025 Formula car.</li>
     </ul>
 
     <h2 class="mt-4">Contributions:</h2>
@@ -70,6 +71,7 @@
       <li>Optimized manufacturability by reducing welds and using large aluminum sheets, cutting manufacturing costs from $20,000 to $3,000 while improving ease of fabrication.</li>
       <li>Modeled lids, walls, and casing in SolidWorks, incorporating aerodynamic air terminals for on-road cooling and improved thermal performance.</li>
       <li>Conducted FEA to validate strength, durability, and safety while ensuring easy battery accessibility for quick swaps during operation.</li>
+      <li><strong>Learned:</strong> </li>
     </ul>
     
 <figure class="text-center my-3">
@@ -82,6 +84,7 @@
       <li>Selected Aluminum 5052-H32 for enclosure material. This selection decreased weight and allowed for better thermal contact.</li>
       <li>Modeled lids, walls, and casing in SolidWorks. Made designs to accomodate new EV car designs and allow for easy electrical wiring access.</li>
       <li>Conducted FEA analysis to evaluate durability and safety.</li>
+      <li><strong>Learned:</strong> </li>
     </ul>
 
 
@@ -95,6 +98,7 @@
       <li>Using Solidworks, designed mounting tabs to connect chassis with the accumulator.</li>
       <li>Coordinated with other subteam members to design and ensure compatability of chassis design.</li>
       <li>Rearranged and allocated space for accumulator to account for car stability, cooling, and weight.</li>
+      <li><strong>Learned:</strong> </li>
     </ul>
 
 <figure class="text-center my-3">
@@ -102,11 +106,22 @@
   <figcaption class="mt-2 text-muted">2026 Chassis Design CAD</figcaption>
 </figure>
     
+<h3>Manufacturing</h3>
+    <ul>
+      <li>Milled out the differential mounts for our formula car from a block of aluminum using a CNC mill. These differential mounts allow for the wheel axles to spin at different speeds.</li>
+      <li>CAD and CAM the design from start to finish using Solidworks and Fusion360.</li>
+      <li><strong>Learned:</strong> </li>
+    </ul>
+  
+<figure class="text-center my-3">
+  <img src="../assets/images/PortfolioF1.5.jpg" class="img-fluid rounded shadow" alt="2026 Differential mount">
+  <figcaption class="mt-2 text-muted">2026 Differential Mount</figcaption>
+</figure>
 
 
     <h2 class="mt-4">Tools &amp; Technologies</h2>
     <ul>
-      <li><strong>CAD:</strong> SolidWorks</li>
+      <li><strong>CAD:</strong> SolidWorks, Fusion360</li>
       <li><strong>Material Analysis:</strong> ANSYS</li>
       <li><strong>Prototyping:</strong> Machining (Lathe, Mill, Saw) , 3D Printing, Water Jetting, Laser Cutting </li>
     </ul>
