--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
               <li><a class="dropdown-item" href="projects/FoosballResearch.html">Automated Foosball Table</a></li>
               <li><a class="dropdown-item" href="projects/F1.html">FSAE Powertrain</a></li>
               <li><a class="dropdown-item" href="projects/CRC.html">Combat Robotics</a></li>
+              <li><a class="dropdown-item" href="projects/Coursework.html">Coursework</a></li>
+              <li><a class="dropdown-item" href="projects/WSP.html">WSP internship</a></li>
             </ul>
           </li>
           
