--- a/projects/FoosballResearch.html
+++ b/projects/FoosballResearch.html
@@ -24,6 +24,8 @@
               <li><a class="dropdown-item" href="FoosballResearch.html">Automated Foosball Table</a></li>
               <li><a class="dropdown-item" href="F1.html">FSAE Powertrain</a></li>
               <li><a class="dropdown-item" href="CRC.html">Combat Robotics</a></li>
+              <li><a class="dropdown-item" href="Coursework.html">Coursework</a></li>
+              <li><a class="dropdown-item" href="WSP.html">WSP internship</a></li>
             </ul>
           </li>
         </ul>
@@ -50,18 +52,18 @@
 
   
     <figure class="text-center my-3">
-      <img src="../assets/images/PortfolioFR.PNG" class="img-fluid rounded shadow" alt="Aluminum Accumulator 2025">
-      <figcaption class="mt-2 text-muted">2025 Aluminum Accumulator CAD</figcaption>
+      <img src="../assets/images/PortfolioFR.PNG" class="img-fluid rounded shadow" alt="Foosball Environment">
+      <figcaption class="mt-2 text-muted">Foosball Simulated Environment</figcaption>
     </figure>
 
     <figure class="text-center my-3">
-      <img src="../assets/images/PortfolioFR.3.PNG" class="img-fluid rounded shadow" alt="Aluminum Accumulator 2025">
-      <figcaption class="mt-2 text-muted">2025 Aluminum Accumulator CAD</figcaption>
+      <img src="../assets/images/PortfolioFR.3.PNG" class="img-fluid rounded shadow" alt="CAD" style="max-width:50%;">
+      <figcaption class="mt-2 text-muted">Foosball Table Full CAD</figcaption>
     </figure>
 
     <figure class="text-center my-3">
-      <img src="../assets/images/PortfolioFR.2.jpg" class="img-fluid rounded shadow" alt="Aluminum Accumulator 2025">
-      <figcaption class="mt-2 text-muted">2025 Aluminum Accumulator CAD</figcaption>
+      <img src="../assets/images/PortfolioFR.2.jpg" class="img-fluid rounded shadow" alt="Camera Setup" style="max-width:40%;">
+      <figcaption class="mt-2 text-muted">Built Camera Setup and Handle Motors</figcaption>
     </figure>
 
 
