--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <p>
       My name is Handsome Zheng, a current Sophomore studying Mechanical Engineering with a minor in Computer Science at Columbia University.
       I am passionate about AI, Robotics, and Machine Learning, with hands-on experience in CAD, machining, and engineering projects.
-      I thrive in collaborative, problem-solving environments and enjoy art, working out, and traveling.
+      I thrive in collaborative, problem-solving environments and enjoy art, Dancing, Swimming and traveling.
     </p>
   </section>
 
