--- a/index.html
+++ b/index.html
@@ -29,21 +29,13 @@
               aria-expanded="false">
               Projects
             </a>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu dropdown-menu-end">
               <li><a class="dropdown-item" href="projects/FoosballResearch.html">Automated Foosball Table</a></li>
               <li><a class="dropdown-item" href="projects/F1.html">FSAE Powertrain</a></li>
               <li><a class="dropdown-item" href="projects/CRC.html">Combat Robotics</a></li>
               <li><a class="dropdown-item" href="projects/Coursework.html">Coursework</a></li>
-              <li><a class="dropdown-item" href="projects/WSP.html">WSP internship</a></li>
+              <li><a class="dropdown-item" href="projects/WSP.html">WSP Internship</a></li>
             </ul>
-          </li>
-          
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -66,7 +58,7 @@
     <p>
       My name is Handsome Zheng, a current Sophomore studying Mechanical Engineering with a minor in Computer Science at Columbia University.
       I am passionate about AI, Robotics, and Machine Learning, with hands-on experience in CAD, machining, and engineering projects.
-      I thrive in collaborative, problem-solving environments and enjoy art, Dancing, Swimming and traveling.
+      I thrive in collaborative, problem-solving environments and enjoy art, dancing, swimming, and traveling.
     </p>
   </section>
 
@@ -81,8 +73,7 @@
     </div>
   </section>
   
-
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
