--- a/projects/CRC.html
+++ b/projects/CRC.html
@@ -21,7 +21,7 @@
           <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Projects</a>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu dropdown-menu-end">
               <li><a class="dropdown-item" href="FoosballResearch.html">Automated Foosball Table</a></li>
               <li><a class="dropdown-item" href="F1.html">FSAE Powertrain</a></li>
               <li><a class="dropdown-item" href="CRC.html">Combat Robotics</a></li>
