--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               Projects
             </a>
             <ul class="dropdown-menu dropdown-menu-end">
-              <li><a class="dropdown-item" href="projects/FoosballResearch.html">Automated Foosball Table</a></li>
+              <li><a class="dropdown-item" href="projects/FoosballResearch.html">Columbia Creative Research Lab</a></li>
               <li><a class="dropdown-item" href="projects/F1.html">FSAE Powertrain</a></li>
               <li><a class="dropdown-item" href="projects/CRC.html">Combat Robotics</a></li>
               <li><a class="dropdown-item" href="projects/Coursework.html">Coursework</a></li>
