--- a/projects/F1.html
+++ b/projects/F1.html
@@ -22,11 +22,11 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Projects</a>
             <ul class="dropdown-menu dropdown-menu-end">
-              <li><a class="dropdown-item" href="FoosballResearch.html">Automated Foosball Table</a></li>
+              <li><a class="dropdown-item" href="FoosballResearch.html">Columbia Creative Research Lab</a></li>
               <li><a class="dropdown-item" href="F1.html">FSAE Powertrain</a></li>
               <li><a class="dropdown-item" href="CRC.html">Combat Robotics</a></li>
               <li><a class="dropdown-item" href="Coursework.html">Coursework</a></li>
-              <li><a class="dropdown-item" href="WSP.html">WSP internship</a></li>
+              <li><a class="dropdown-item" href="WSP.html">WSP Internship</a></li>
             </ul>
           </li>
         </ul>
@@ -50,6 +50,8 @@
       <strong>Tenure</strong> - 2024 to present
     </p>
 
+ 
+
     <h2 class="mt-4">Role:</h2>
     <p>
       <strong>HV Enclosure Lead</strong> - Responsible for the full design cycle from
@@ -62,6 +64,14 @@
       <li>Ensure structural integrity and cooling efficiency for competition use.</li>
       <li>Manufacture car components through machining and 3d printing.</li>
       <li>Prototype and build the EV 2026 Formula car while iterating and improving the 2025 Formula car.</li>
+    </ul>
+
+      <h2 class="mt-4">Tools &amp; Technologies &amp; Skills</h2>
+    <ul>
+     <li><strong>CAD: </strong>SolidWorks, Fusion 360.</li>
+    <li><strong>Material Analysis: </strong>ANSYS (FEA), Material Selection.</li>
+    <li><strong>Manufacturing: </strong>Machining (Lathe, Mill, Saw), 3D Printing, Water Jetting, Laser Cutting, Welding Design Optimization.</li>
+    <li><strong>Skills: </strong>Cross-team coordination, working with mentors and manufacturers, project organization, manufacturability optimization.</li>
     </ul>
 
     <h2 class="mt-4">Contributions:</h2>
@@ -143,13 +153,7 @@
   </div>
 </div>
 
-    <h2 class="mt-4">Tools &amp; Technologies &amp; Skills</h2>
-    <ul>
-     <li><strong>CAD: </strong>SolidWorks, Fusion 360.</li>
-    <li><strong>Material Analysis: </strong>ANSYS (FEA), Material Selection.</li>
-    <li><strong>Manufacturing: </strong>Machining (Lathe, Mill, Saw), 3D Printing, Water Jetting, Laser Cutting, Welding Design Optimization.</li>
-    <li><strong>Skills: </strong>Cross-team coordination, working with mentors and manufacturers, project organization, manufacturability optimization.</li>
-    </ul>
+
 
 
     
