--- a/projects/FoosballResearch.html
+++ b/projects/FoosballResearch.html
@@ -21,11 +21,11 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Projects</a>
             <ul class="dropdown-menu dropdown-menu-end">
-              <li><a class="dropdown-item" href="FoosballResearch.html">Automated Foosball Table</a></li>
+              <li><a class="dropdown-item" href="FoosballResearch.html">Columbia Creative Research Lab</a></li>
               <li><a class="dropdown-item" href="F1.html">FSAE Powertrain</a></li>
               <li><a class="dropdown-item" href="CRC.html">Combat Robotics</a></li>
               <li><a class="dropdown-item" href="Coursework.html">Coursework</a></li>
-              <li><a class="dropdown-item" href="WSP.html">WSP internship</a></li>
+              <li><a class="dropdown-item" href="WSP.html">WSP Internship</a></li>
             </ul>
           </li>
         </ul>
@@ -35,7 +35,7 @@
 
   <!-- Project Content -->
   <section class="container my-5">
-    <h1>Automated Foosball Table</h1>
+    <h1>Columbia Creative Research Lab: Automated Foosball Table Mechanical Researcher</h1>
     <p>
       An AI &amp; ML-powered robotic foosball player built with
       <strong>SolidWorks</strong>, <strong>MuJoCo</strong>, and
