--- a/projects/F1.html
+++ b/projects/F1.html
@@ -71,7 +71,7 @@
      <li><strong>CAD: </strong>SolidWorks, Fusion 360.</li>
     <li><strong>Material Analysis: </strong>ANSYS (FEA), Material Selection.</li>
     <li><strong>Manufacturing: </strong>Machining (Lathe, Mill, Saw), 3D Printing, Water Jetting, Laser Cutting, Welding Design Optimization.</li>
-    <li><strong>Skills: </strong>Cross-team coordination, working with mentors and manufacturers, project organization, manufacturability optimization.</li>
+    <li><strong>Skills/Developed: </strong>Cross-team coordination, working with mentors and manufacturers, project organization, manufacturability optimization.</li>
     </ul>
 
     <h2 class="mt-4">Contributions:</h2>
@@ -83,7 +83,7 @@
       <li>Optimized manufacturability by reducing welds and using large aluminum sheets, cutting manufacturing costs from $20,000 to $3,000 while improving ease of fabrication.</li>
       <li>Modeled lids, walls, and casing in SolidWorks, incorporating aerodynamic air terminals for on-road cooling and improved thermal performance.</li>
       <li>Conducted FEA to validate strength, durability, and safety while ensuring easy battery accessibility for quick swaps during operation.</li>
-      <li><strong>Learned:</strong> How to apply properties of thermodynamics for cooling; How to coordinate with team members and manufacturers; Improved skills with Solidworks and material selection.</li>
+      <li><strong>Learned/Developed:</strong> How to apply properties of thermodynamics for cooling; How to coordinate with team members and manufacturers; Improved skills with Solidworks and material selection.</li>
     </ul>
     
 <figure class="text-center my-3">
@@ -96,7 +96,7 @@
       <li>Selected Aluminum 5052-H32 for enclosure material. This selection decreased weight and allowed for better thermal contact.</li>
       <li>Modeled lids, walls, and casing in SolidWorks. Made designs to accomodate new EV car designs and allow for easy electrical wiring access.</li>
       <li>Conducted FEA analysis to evaluate durability and safety.</li>
-      <li><strong>Learned: </strong> How to design for tolerance and accessibility; Developed skills in solidworks. </li>
+      <li><strong>Learned/Developed: </strong> How to design for tolerance and accessibility; Developed skills in solidworks. </li>
     </ul>
 
 
@@ -110,7 +110,7 @@
       <li>Using Solidworks, designed mounting tabs to connect chassis with the accumulator.</li>
       <li>Coordinated with other subteam members to design and ensure compatability of chassis design.</li>
       <li>Rearranged and allocated space for accumulator to account for car stability, cooling, and weight.</li>
-      <li><strong>Learned:</strong>  How chassis layout impacts stability, cooling, and weight distribution; Improved cross-team collaboration; Strengthened CAD skills for multi-system integration; Gained insight into manufacturability in motorsport engineering.</li>
+      <li><strong>Learned/Developed:</strong>  How chassis layout impacts stability, cooling, and weight distribution; Improved cross-team collaboration; Strengthened CAD skills for multi-system integration; Gained insight into manufacturability in motorsport engineering.</li>
     </ul>
 
 <figure class="text-center my-3">
@@ -122,7 +122,7 @@
     <ul>
       <li>Milled out the differential mounts for our formula car from a block of aluminum using a CNC mill. These differential mounts allow for the wheel axles to spin at different speeds.</li>
       <li>CAD and CAM the design from start to finish using Solidworks and Fusion360.</li>
-      <li><strong>Learned:</strong> </li>
+      <li><strong>Learned/Developed:</strong> </li>
     </ul>
   
 <figure class="text-center my-3">
@@ -135,7 +135,7 @@
     <ul>
       <li>Coordinated with electrical team to integrate controls and battery packs into accumulator.</li>
       <li>CAD and 3D printed parts for cross bar.</li>
-      <li><strong>Learned:</strong> Skills in 3D printing; Developed better understanding of electrical components. </li>
+      <li><strong>Learned/Developed:</strong> Skills in 3D printing; Developed better understanding of electrical components. </li>
     </ul>
 
 <div class="row text-center my-3">
