--- a/projects/CRC.html
+++ b/projects/CRC.html
@@ -89,9 +89,8 @@
 
 <h3>Drive Train Machining</h3>
     <ul>
-      <li>Helped machine drive train frame for robot. </li>
-        <li></li>
-      <li><strong>Learned/Developed:</strong>  </li>
+      <li>Helped machine drive train frame for robot using CNC Tormach Mill from block of aluminum.</li>
+      <li><strong>Learned/Developed:</strong> Skills with machining tools, Skills with manufacturing and material selection. </li>
     </ul>
   
 <figure class="text-center my-3">
