--- a/projects/WSP.html
+++ b/projects/WSP.html
@@ -107,7 +107,7 @@
       <li>Conducted Punch List, Field Observations, and Site Surveys for clients to understand and mark up plans for future designing. </li>
       <li>Consulted with clients and other companies/consultants for field observations. </li>
       <li>Marked down missing units, incorrect drawing plans, and collected information on site observations utilizing BlueBeam.</li>
-      <li><strong>Learned/Developed: </strong>  Various types of mechanical systems/units used in HVAC </li>
+      <li><strong>Learned/Developed: </strong>  Familiarity with various types of mechanical systems/units used in HVAC; Understanding of how mechanical systems are implemented in buildings; Collaboration skills working with multiple agencies and other engineers. </li>
     </ul>
   
 <figure class="text-center my-3">
